--- a/src/app/components/add-modalidad/add-modalidad.component.html
+++ b/src/app/components/add-modalidad/add-modalidad.component.html
@@ -1,6 +1,6 @@
 
 <div class="container">
-  <form [formGroup]="formsRegistra" id="idFormModalidad">
+  <form  id="idFormModalidad">
     <div class="row">
           <mat-toolbar color="primary" >    
             <span>Registra Modalidad</span>    
@@ -10,46 +10,34 @@
             <mat-form-field class="col-md-4">
               <mat-label>Nombre</mat-label>
               <input  matInput [(ngModel)] ="objModalidad.nombre"  formControlName="nombre">
-              <mat-hint style="color: red" *ngIf="formsRegistra.controls.nombre.touched && !(formsRegistra.controls.nombre.errors == null)" >     
-                    El nombre es de 3 a 30 caracteres 
-              </mat-hint>
+            
             </mat-form-field>
             <mat-form-field class="col-md-4">
               <mat-label>Número de Hombres</mat-label>
               <input  matInput [(ngModel)] ="objModalidad.numHombres" formControlName="numHombres">
-              <mat-hint style="color: red" *ngIf="formsRegistra.controls.numHombres.touched && !(formsRegistra.controls.numHombres.errors == null)" >     
-                    El número de hombres es de dos dígitos
-              </mat-hint>
+             
             </mat-form-field>
             <mat-form-field class="col-md-4">
               <mat-label>Número de Mujeres</mat-label>
               <input  matInput  [(ngModel)] ="objModalidad.numMujeres" formControlName="numMujeres">
-              <mat-hint style="color: red" *ngIf="formsRegistra.controls.numMujeres.touched && !(formsRegistra.controls.numMujeres.errors == null)" >     
-                    El número de mujeres es de dos dígitos
-             </mat-hint>
+            
             </mat-form-field>
      </div>   
      <div class="row">
             <mat-form-field class="col-md-4">
               <mat-label>Edad Mínima</mat-label>
               <input  matInput [(ngModel)] ="objModalidad.edadMinima"  formControlName="edadMinima">
-              <mat-hint style="color: red" *ngIf="formsRegistra.controls.edadMinima.touched && !(formsRegistra.controls.edadMinima.errors == null)" >     
-                La edad mínima es de 18 a 25 años
-             </mat-hint>
+              
             </mat-form-field>
             <mat-form-field class="col-md-4">
               <mat-label>Edad Máxima</mat-label>
               <input  matInput [(ngModel)] ="objModalidad.edadMaxima" formControlName="edadMaxima">
-              <mat-hint style="color: red" *ngIf="formsRegistra.controls.edadMaxima.touched && !(formsRegistra.controls.edadMaxima.errors == null)" >     
-                La edad máxima es de 18 a 40 años
-             </mat-hint>
+           
             </mat-form-field>
             <mat-form-field class="col-md-4">
               <mat-label>Sede</mat-label>
               <input matInput [(ngModel)] ="objModalidad.sede" formControlName="sede">
-              <mat-hint style="color: red" *ngIf="formsRegistra.controls.sede.touched && !(formsRegistra.controls.sede.errors == null)" >     
-                La sede es de 3 a 30 caracteres 
-             </mat-hint>
+
             </mat-form-field>
      </div>
      <div class="row">     
@@ -61,13 +49,12 @@
                   <mat-option value="{{x.idDeporte}}">{{x.nombre}}</mat-option>
                 </ng-container>
               </mat-select>
-              <mat-hint style="color: red" *ngIf="formsRegistra.controls.deporte.touched && !(formsRegistra.controls.deporte.errors == null)" >     
-                El deporte es obligatorio
-             </mat-hint>
+           
             </mat-form-field> 
       </div>           
       <div class="row">
-            <button mat-raised-button type="submit" color="primary" (click)="registra()" [disabled]="formsRegistra.invalid">Registra</button>
+            <button mat-raised-button type="submit" color="primary" (click)="registra()"
+             >Registra</button>
       </div>
     </form>
 </div>
